--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,18 @@
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>図書管理アプリ{% block title %}{% endblock %}</title>
+    {% bootstrap_css %} {# BootstrapのCSSの読み込み #}
 </head>
 <body>
+    <div class="container">
     {% block content %}
     {% comment %} 各ページのコンテンツが挿入される {% endcomment %}
     {% endblock %}
+    </div>
+    {% bootstrap_javascript %}
 </body>
 </html>
