検索機能の実装

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -12,7 +12,7 @@
             <form action="" method="post" class="mb-3">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-danger">削除</button>
-                <a href="{% url 'books_list' %}" class="btn btn-secondary ms-2">一覧ページへ戻る</a>
+                <a href="{% url 'index' %}" class="btn btn-secondary ms-2">一覧ページへ戻る</a>
             </form>
         </div>
     </div>
