--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,20 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>図書管理アプリ{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+    図書管理アプリ{% block title %}
+
+    {% endblock %}
+    </title>
     {% bootstrap_css %} {# BootstrapのCSSの読み込み #}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">図書管理アプリ</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="{% url 'index' %}"> 図書管理アプリ</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -23,22 +25,29 @@
             <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-            </a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li>
+                <a class="dropdown-item" href="#">Action</a>
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Another action</a>
+                </li>
+                <li>
+                <hr class="dropdown-divider" />
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Something else here</a>
+                </li>
             </ul>
             </li>
             <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
             </li>
         </ul>
-        <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="タイトル・著者" aria-label="Search">
+        <form method="get" action="{% url 'search' %}" class="d-flex">
+            {{ searchform.words }}
+            {% comment %} <input class="form-control me-2" type="search" placeholder="タイトル・著者" aria-label="Search"> {% endcomment %}
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
         </div>
@@ -46,7 +55,7 @@
     </nav>
     <div class="container">
     {% block content %}
-    {% comment %} 各ページのコンテンツが挿入される {% endcomment %}
+        {% comment %}各ページのコンテンツが挿入される{% endcomment %}
     {% endblock %}
     </div>
     {% bootstrap_javascript %}
