--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load django_bootstrap5 %}
+{% block title %}-一覧ページ{% endblock %}
+
 {% block content %}
-<h1 class="mt-5">検索結果：</h1>
-{% if books %}
+    <h1>図書一覧</h1>
 <table class="table table-striped table-hover">
     <thead class="table-dark">
         <tr>
@@ -34,7 +36,7 @@
         {% endfor %}
     </tbody>
 </table>
-{% else %}
-    <p>"{{ searchform.words.value }}"に一致する投稿はありません。</p>
-{% endif %}
-{% endblock %}
+
+<a href="{% url 'insert' %}" class="btn btn-primary mt-3">本を追加</a>
+
+{%endblock%}
