--- a/templates/insert.html
+++ b/templates/insert.html
@@ -58,7 +58,7 @@
                         <button type="submit" class="btn btn-primary mt-3">{{object|yesno:'更新,作成'}}</button>
                     </form>
                     <div class="mt-3">
-                        <a href="{% url 'books_list'%}" class="btn btn-secondary">← 一覧ページへ戻る</a>
+                        <a href="{% url 'index'%}" class="btn btn-secondary">← 一覧ページへ戻る</a>
                     </div>
                 </div>
             </div>
