--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,8 @@
         {% endfor %}
     </tbody>
 </table>
-
-<a href="{% url 'insert' %}" class="btn btn-primary mt-3">本を追加</a>
-
+{% comment %} ログインしている場合 {% endcomment %}
+{% if user.is_authenticated and user.username == "admin" %}
+    <a href="{% url 'insert' %}" class="btn btn-primary mt-3">本を追加</a>
+{% endif %} 
 {%endblock%}
